--- a/front/estilos.css
+++ b/front/estilos.css
@@ -65,8 +65,6 @@ a{
     height: fit-content;
     padding: 2rem;
     text-align: center;
-    
-   
 }
 .tit1{
     font-size: 1rem;
@@ -75,7 +73,7 @@ a{
 }
 
 .tit2{
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -84,11 +82,25 @@ a{
     height: auto;
 }
 footer{
+    position: relative;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1rem;
     text-align: center;
-    background-color: black;
-    opacity: 0.4;
     margin-top: 10rem;
+}
+footer::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: -1;
+}
+.pie{
+    position: relative;
+    z-index: 2;
 }
