--- a/front/estilos2.css
+++ b/front/estilos2.css
@@ -49,27 +49,59 @@ color: white;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 padding-top: 2rem;
 }
-footer{
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1rem;
-    text-align: center;
-    background-color: black;
-    opacity: 0.4;
-    margin-top: 10rem;
-}
 .enlacesobre{
  display: flex;
  justify-content: end;
 }
 .textohistoria{
-    width: 60vw;
+    position: relative;
+    width: 40vw;
+    height: 20rem;
     margin: auto;
+    border-radius: 1rem;
     margin-top:  3rem;
+    overflow-y: scroll;
+}
+.textohistoria ::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(94, 87, 87); 
+    opacity: 0.4;
+    z-index: -1;
 }
 .historia{
     width: 80%;
     margin: auto;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+    padding: 3rem;
+    z-index: 2;
+}
+footer{
+    position: relative;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 10rem;
+}
+footer::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: -1;
+}
+.pie{
+    position: relative;
+    z-index: 2;
 }
