--- a/front/estilos.css
+++ b/front/estilos.css
@@ -1,17 +1,48 @@
-body{
-   
-    background-image:url(./imagenes/fondo\ pagina.jpg) ;
+/*Cuerpo fondo*/
+.cuerpo::before{
+    position: absolute;
+    content: "";
+    background-image: url(./imagenes/fondocine1.jpg);
     background-size: cover;
-   
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
 }
+.cuerpo{
+    position: relative;
+    z-index: 2;
+}
+
+
+/*Elementos encabezado*/
+
+
+/* barra superior nav*/
+.navegacion{
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.navegacion:hover{
+    color: black;
+}
+.backnavegador{
+    background-color: rgb(230, 210, 33);
+    opacity: 0.7;
+    box-shadow: 2px 2px 8px black;
+}
+
+/* Titulo icono y fondo principal*/
 .titulocinema{
-    margin-top: 2rem;
-    font-size: 3rem;
-    color: white;
+    margin-top: 3rem;
+    margin-left: 1rem;
+    font-size: 4rem;
+    color: black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 
 }
+
 .imgicono{
     margin-bottom: -1.5rem;
     margin-top: -2rem;
@@ -20,74 +51,27 @@ body{
 }
 
 
-a{
-    text-decoration: none;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 0.8rem;
-    font-weight: bold;
-    color: white; 
-    
-}
-.enlace1{
-    margin-right: 8rem;
-   
-}
-.enlace2{
-    margin-right: 15rem;
-}
-.menuenlaces{
-    
-    background-color: rgb(15, 15, 15);
-    height: 0.2rem;
-    margin: auto;
-    box-shadow: 0px 5px 9px rgb(107, 13, 13) ;
-    text-align: end;
-    padding: 1rem;
-    opacity: 0.8;
-}
 .tituloeicono{
+    background-image: url(./imagenes/cine3.jpg);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 2px 2px 8px black;
+    margin-left:4rem ;
+    margin-right:4rem ;
+    margin-top: 3rem;
     display: flex;
-   
+    justify-content:flex-end; 
 }
 
-.contenedor{
-    width: 80vw;
-    margin: auto;
-    height: fit-content;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 4rem;
-}
-
-.tar{
-    width: fit-content;
-    height: fit-content;
-    padding: 2rem;
-    text-align: center;
-}
-.tit1{
-    font-size: 1rem;
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.tit2{
-    font-size: 0.8rem;
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.imgtarjeta{
-    width: 10rem;
-    height: auto;
-}
+/* elementos de pie de pagina*/
 footer{
     position: relative;
-    color: white;
+    color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1rem;
     text-align: center;
-    margin-top: 10rem;
+   
+    box-shadow: 2px 2px 8px black;
 }
 footer::before{
     position: absolute;
@@ -95,12 +79,77 @@ footer::before{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: 0.5;
+    height:100% ;
+    background-color: rgb(230, 210, 33);
+    opacity: 0.7;
     z-index: -1;
 }
 .pie{
     position: relative;
     z-index: 2;
+}
+
+/* texto y foto sobremi.html*/
+
+.imagenytextosobremi{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 4rem;
+    margin-bottom: 7rem;
+}
+.imgsobremi{
+width: 30%;
+height: auto;
+border-radius: 1rem;
+box-shadow: 2px 2px 8px black;
+}
+.textosobremi{
+    width: 40%;
+    height: auto;
+    padding-top: 5rem;
+}
+
+/*elementos sobre historiadelcine.html*/
+
+.textohistoria{
+    width: 80vh;
+    margin: auto;
+    margin-top: 3rem;
+}
+
+
+
+/*elementos aplicados al DOM*/
+
+
+.tar{
+    width: fit-content;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.tit1{
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
+.tit2{
+    font-size: 1rem;
+    color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.imgtarjeta{
+    
+    width: 10rem;
+    height: auto;
+}
+.contenedor{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 4rem;
+   
 }
