--- a/front/estilos.css
+++ b/front/estilos.css
@@ -136,9 +136,19 @@ box-shadow: 2px 2px 8px black;
 .historia{
     font-weight: bold;
 }
-.previo{
-    color: black;
+
+.carousel-control-prev,
+.carousel-control-next {
+    transition: all 0.5s ease;
 }
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+    background-color:rgb(230, 210, 33);
+    box-shadow: 2px 2px 8px black;
+    transition: all 0.5s ease;
+}
+
 
 
 /*elementos aplicados al DOM*/
